Modelo dim_produtos finalizado

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,9 +32,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   dbt_northwind:
-    # Applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      erp_northwind:
+        +materialized: view
+
 
 
 
