--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,6 +32,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   dbt_northwind:
+    marts:
+      +materialized: table
     staging:
       erp_northwind:
         +materialized: view
